After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 712350 - eog doesn't export actions on D-Bus
eog doesn't export actions on D-Bus
Status: RESOLVED FIXED
Product: eog
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: EOG Maintainers
EOG Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-11-15 05:26 UTC by Allison Karlitskaya (desrt)
Modified: 2013-12-01 14:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
EogWindow: export some actions on the bus (2.63 KB, patch)
2013-11-25 01:35 UTC, Allison Karlitskaya (desrt)
none Details | Review

Description Allison Karlitskaya (desrt) 2013-11-15 05:26:06 UTC
Long story, but I'm doing some work on a very large set of images.  I'm trying to use eog to help me do that, and it would be awesome if I could script eog from the outside in order to make my life easier.

I was a bit surprised to discover that eog windows don't expose any actions via D-Bus.  At the very least I would have expected to see things like 'next-image', 'prev-image', 'first-image', 'last-image', etc.  A 'current-image' with integer state might be a neat idea.  Zoom controls and rotate would also be nice.
Comment 1 Felix Riemann 2013-11-20 18:43:42 UTC
eog once had a very simple D-Bus interface which allowed you to remotely open images. I think it got dropped during the GtkApplication-migration or even earlier.

From what I hear this should be somewhat easy now using GApplication and GAction/GMenu. But migrating from GtkAction and GtkUIManager is currently blocked since GAction/GMenu is not really compatible to our plugins.
Comment 2 Allison Karlitskaya (desrt) 2013-11-21 17:33:54 UTC
Indeed you already have a D-Bus interface for opening images.  This works:

gapplication launch org.gnome.eog.ApplicationService abc.png


It would not be too hard to expose a few additional actions on windows, even if you don't drop GtkAction.  I'll try a simple patch.
Comment 3 Allison Karlitskaya (desrt) 2013-11-25 01:35:00 UTC
Created attachment 261382 [details] [review]
EogWindow: export some actions on the bus

Expose a few useful actions in GAction form so that they can be hit from
D-Bus.
Comment 4 Felix Riemann 2013-12-01 14:22:24 UTC
That is really easy. I thought there would be more to it.
So I guess that could work as a starting point for a GMenu transition in the future.

I extended your patch by rotating and zooming and a custom action whose state will show the current image relative to the collection size.
---
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.