EogWindow: export some actions on the bus

Expose a few useful actions in GAction form so that they can be hit from
D-Bus.

https://bugzilla.gnome.org/show_bug.cgi?id=712350